--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 <div>
                     <span class="digit">350+</span>
                 <br> 
-                 <span class="vi"> Video tutorial</span>
+                 <span class="vi">Video tutorial</span>
                 </div>
                 
             </button>
             <button class="btn-4"> 
-                <span class="digit1"> 500+</span>
+                <span class="digit1"> 500+ </span>
                 <br>
                  <span>Free workout videos</span>
             </button> 
@@ -323,7 +323,7 @@
             </div>
         </div>
         <hr>
-            <h5 class="h5" >All right reserved @Fitness 2024</h5>
+             <p class="foot"><small>All right reserved @Fitness 2024 </small></p>
         </section>
     </footer>   
     
